Destroy on failed construction